各StateクラスにコマンドのMapを持たせコマンドと紐づく次のStateを登録することでConcreteContextのルーティングを綺麗にできた